--- a/src/sections/Author/styles.css
+++ b/src/sections/Author/styles.css
@@ -1,39 +1,51 @@
-.author_section{
-  position: relative;
-  margin: 140px 0 40px;
-  max-width: 1200px;
+.author_section {
+    display: flex;
 }
 
-.author_background{
-  width: 70%;
-  height: 504px;
-  background-image: url("./../../assets/openbook.webp");
-  background-size: contain;
-  background-repeat: no-repeat;
-  border-radius: 4px;
-
+.author_title {
+    position: relative;
+    font-size: 55px;
+    line-height: 1em;
+    margin-bottom: 32px;
 }
 
-.author_info{
-  position: absolute;
-  display: flex;
-  top: 50%;
-  transform: translate3d(0, -50%, 0);
-  padding: 24px;
-  border-radius: 4px;
-  justify-content: space-between;
-  align-items: center;
-  right: 60px;
-  width: 80%;
-  background: white;
-  box-shadow: 0 0 24px 0 rgba(34, 60, 80, 0.2);
+.author_title:after {
+    content: '';
+    position: absolute;
+    left: 2px;
+    bottom: -12px;
+    width: 60%;
+    height: 1px;
+    background: #e79fb6;
 }
 
-.author_about{
-  width: 65%;
+.author_info {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    padding: 32px;
+    border-radius: 4px;
+    justify-content: center;
+    align-items: flex-start;
+    background: white;
+    box-shadow: 0 0 24px 0 rgba(34, 60, 80, 0.2);
 }
 
-.author_photo{
-  width: 200px;
-  height: 200px;
+.author_photo_wrapper {
+    flex: 1;
+}
+
+.author_photo_wrapper .author_photo {
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width: 767px) {
+    .author_section {
+        flex-direction: column;
+    }
+
+    .author_title {
+        font-size: 32px;
+    }
 }
