--- a/src/sections/Header/header.css
+++ b/src/sections/Header/header.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     width: 100%;
     max-width: 1200px;
-    padding: 24px;
+    padding: 24px 40px;
 }
 
 .header a {
@@ -41,11 +41,11 @@
 
 @media screen and (max-width: 432px) {
     .header {
-        flex-direction: column;
+        flex-direction: column-reverse;
         justify-content: center;
         align-items: center;
-        padding-right: 0;
-        padding-left: 0;
+        padding-right: 10px;
+        padding-left: 10px;
     }
 
     .logo {
