--- a/src/sections/Main/main.css
+++ b/src/sections/Main/main.css
@@ -4,29 +4,27 @@
     justify-content: space-between;
     width: 100%;
     max-width: 1200px;
-    padding: 24px 24px 48px;
-    min-height: 600px;
+    padding: 24px 40px 48px;
 }
 
 .main .description {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-right: 60px;
     color: white;
-    width: 50%;
+    flex: 1;
 }
 
 .main .description .title {
-    font-size: 85px;
+    font-size: 55px;
     line-height: 1em;
     margin-bottom: 12px;
 }
 
 .main .description .sup {
-    opacity: 0.5;
-    font-size: 12px;
+    font-size: 20px;
     margin-bottom: 12px;
+    color: #e6cad3;
 }
 
 .main .description .buy-link {
@@ -51,29 +49,18 @@
 }
 
 .main .preview {
-    position: absolute;
     border-radius: 4px;
     padding: 62px 42px;
     background: #e79fb6;
     right: 24px;
+    margin-bottom: 20px;
+    margin-right: 80px;
+    flex: 1;
 }
 
-.book {
-    width: 400px
-}
-
-@media screen and (max-width: 1024px) {
-    .main {
-        min-height: 500px;
-    }
-
-    .main .description .title {
-        font-size: 65px;
-    }
-
-    .book {
-        width: 300px
-    }
+.main .preview .book {
+    width: 100%;
+    box-shadow: 0 0 25px -2px rgba(34, 60, 80, 0.4);
 }
 
 @media screen and (max-width: 767px) {
@@ -81,26 +68,26 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding-bottom: 24px;
+        padding: 24px 32px 24px;
     }
 
     .main .description {
         padding-right: 0;
         padding-bottom: 24px;
-        width: auto;
     }
 
     .main .description .title {
-        font-size: 52px;
+        font-size: 32px;
+    }
+
+    .main .description .sup {
+        font-size: 15px;
+        margin-bottom: 8px;
     }
 
     .main .preview {
-        position: relative;
-        right: auto;
-    }
-
-    .book {
-        width: 200px
+        margin-right: 0;
+        padding: 42px 22px;
     }
 }
 
