--- a/src/sections/Main/main.css
+++ b/src/sections/Main/main.css
@@ -19,6 +19,8 @@
     font-size: 55px;
     line-height: 1em;
     margin-bottom: 12px;
+    font-style: italic;
+    font-family: 'Amatic SC', cursive;
 }
 
 .main .description .sup {
